[package]
name = "nanovg"
version = "0.4.0"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
build = "build.rs"
readme = "README.md"
description = "Idiomatic bindings to the NanoVG library"
homepage = "https://github.com/KevinKelley/nanovg-rs"
repository = "https://github.com/KevinKelley/nanovg-rs"
keywords = ["nanovg", "bindings", "vector", "graphics", "opengl"]
categories = ["rendering::graphics-api", "games", "gui"]
license = "MIT/Zlib"

[lib]
name = "nanovg"

[features]
gl2 = []
gl3 = []
gles2 = []
gles3 = []

[dependencies]
libc = "*"
bitflags = "1.0"

[build-dependencies]
gcc = "0.3"

[dev-dependencies]
glutin = "0.10.0"
gl = "0.6.3"
chrono = "0.4"
rand = "0.4"

[[example]]
name = "demo-glutin"
required-features = ["gl3"]

[[example]]
name = "demo-clock"
required-features = ["gl3"]

[[example]]
name = "demo-ui"
required-features = ["gl3"]
