[package]
name = "nanovg"
version = "0.4.0"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
readme = "README.md"
description = "Idiomatic bindings to the NanoVG library"
homepage = "https://github.com/KevinKelley/nanovg-rs"
repository = "https://github.com/KevinKelley/nanovg-rs"
keywords = ["nanovg", "bindings", "vector", "graphics", "opengl"]
categories = ["rendering::graphics-api", "games", "gui"]
license = "MIT/Zlib"

[lib]
name = "nanovg"

[features]
gl2 = []
gl3 = []
gles2 = []
gles3 = []
#default = ["gl3"]

[dependencies]
nanovg-sys = { path = "nanovg-sys", version = "0.1.0" }

[dev-dependencies]
glutin = "0.13.0"
gl = "0.10.0"
chrono = "0.4"
rand = "0.4"
lazy_static = "1.0"

[[example]]
name = "demo-glutin"
required-features = ["gl3"]

[[example]]
name = "demo-clock"
required-features = ["gl3"]

[[example]]
name = "demo-ui"
required-features = ["gl3"]

[[example]]
name = "demo-cutout"
required-features = ["gl3"]

[[example]]
name = "demo-text"
required-features = ["gl3"]

[[example]]
name = "demo-transform"
required-features = ["gl3"]
