[package]
name = "nanovg"
version = "1.0.2"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
readme = "README.md"
description = "Idiomatic bindings to the NanoVG library"
homepage = "https://github.com/KevinKelley/nanovg-rs"
repository = "https://github.com/KevinKelley/nanovg-rs"
keywords = ["nanovg", "bindings", "vector", "graphics", "opengl"]
categories = ["rendering::graphics-api", "games", "gui"]
license = "MIT/Zlib"

[package.metadata.docs.rs]
features = ["gl3"]

[lib]
name = "nanovg"

[features]
gl2 = ["nanovg-sys/gl2"]
gl3 = ["nanovg-sys/gl3"]
gles2 = ["nanovg-sys/gles2"]
gles3 = ["nanovg-sys/gles3"]

[dependencies]
nanovg-sys = { path = "nanovg-sys", version = "1.0.2" }

[dev-dependencies]
glutin = "0.13.0"
gl = "0.10.0"
chrono = "0.4"
rand = "0.4"
lazy_static = "1.0"

[[example]]
name = "demo-glutin"

[[example]]
name = "demo-clock"

[[example]]
name = "demo-ui"

[[example]]
name = "demo-cutout"

[[example]]
name = "demo-text"

[[example]]
name = "demo-transform"
