[package]
name = "nanovg-sys"
version = "1.0.1"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
build = "build.rs"
links = "nanovg"
description = "Native bindings to the NanoVG library"
homepage = "https://github.com/KevinKelley/nanovg-rs"
repository = "https://github.com/KevinKelley/nanovg-rs"
keywords = ["nanovg", "bindings", "vector", "graphics", "opengl"]
categories = ["rendering::graphics-api", "games", "gui"]
license = "MIT/Zlib"

[package.metadata.docs.rs]
features = ["gl3"]

[lib]
name = "nanovg_sys"
path = "lib.rs"

[features]
gl2 = []
gl3 = []
gles2 = []
gles3 = []

[dependencies]
bitflags = "1.0.3"

[build-dependencies]
cc = "1.0"
