[package]
name = "nanovg_examples"
version = "0.3.0"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies.libc]
version = "*"

[dependencies.nanovg]
path = "../.."
features = ["gl3"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.sdl2-sys]
git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.png]
git = "https://github.com/servo/rust-png"
