[package]
name = "nanovg_examples"
version = "0.1.0"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies.num]
version = "*"

[dependencies.nanovg]
#git = "https://github.com/KevinKelley/nanovg-rs"
path = "../.."

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
