[package]
name = "nanovg_examples"
version = "0.3.0"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies.nanovg]
path = "../.."
features = ["gl3"]

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.png]
git = "https://github.com/servo/rust-png"
